// TODO message结构的属性名请使用 驼峰小写字母开始
// TODO enum枚举的属性名请使用 驼峰大写字母开始
syntax = "proto3";
option go_package = "/pb";
package pb;

// 登陆请求(建立连接后的第一条消息，验证通过后则进行后续流程)
//gate.user.login
message C2SLogin {
  string             token = 1;      // 登陆token(web login api生成的base64字符串)
  map<int32, string> params = 2;     // 登陆时上传的参数 key: LoginParams
}

// 登陆响应
// gate.user.login
message S2CLogin {
  int64              uid = 1;      // 游戏内的用户唯一id
  map<int32, string> params = 2;   // 登陆后的扩展参数，按需增加
}